Some alignment bugs fixed, slack section finished

--- a/_css/style.css
+++ b/_css/style.css
@@ -1,74 +1,267 @@
 /* general style rules */
-*{
-    font-family: 'Signika','Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+* {
+    font-family: 'Signika', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 500;
 }
 
-body{
+body {
     padding: 0;
     margin: 0;
     overflow-x: hidden;
 }
 
-span{
+span {
     font-weight: bold;
 }
 
+hr {
+    margin-top: -33px;
+    margin-bottom: 30px;
+    width: 150px;
+    height: 3px;
+    background-color: #55c0ec;
+    border: none;
+}
 
-span.command{
-    background-color: rgba(0,0,0,.05);
+span.command {
+    background-color: rgba(0, 0, 0, .05);
     color: crimson;
-    padding : 2px;
+    padding: 2px;
     font-weight: normal;
 }
+
+
 /* end of the general rules */
 
+
 /* Editing navigation section of the page */
-header{
+
+header {
     width: 100vw;
     background-color: #40596b;
     height: auto;
-    display:flex;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-items: center;
     font-size: 1.2em;
 }
-ul li{
+
+ul li {
     display: inline-block;
-    margin-right:10px
+    margin-right: 10px
 }
-ul li a{
+
+ul li a {
     color: #ffd05a;
     text-decoration: none;
 }
+
+
 /* end of navigation section of the page */
 
+
 /* Styling the home section of the page */
-#home{
-    height:auto;
+
+#home {
+    height: auto;
     width: 100vw;
     background-color: #55c0ec;
     display: flex;
     flex-direction: row-reverse;
+    align-items: stretch;
+    justify-content: center;
+    text-align: center;
+}
+
+#bot-image {
+    margin: 5vh 0 5vh 10vw;
+}
+
+#about-bot h1 {
+    position: relative;
+    top:30px;
+    font-size: 5em;
+    color: rgba(0, 0, 0, .65)
+}
+
+#about-bot p {
+    font-size: 30px;
+    color: white;
+    width: 500px;
+}
+
+#addslacklight {
+    margin: 0 auto;
+    display: flex;
+    width: 300px;
+    height: 75px;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    border-radius: 5px;
+    background-color: white;
+    color: red;
+    text-align: center;
+}
+
+#addslacklight p {
+    color: rgba(0, 0, 0, .65);
+    font-size: 1.7em;
+    width:50%;
+}
+
+#addslacklight:hover {
+    background-color: rgba(255, 255, 255, 0.8)
+}
+
+#slacklogo {
+    height: 50%;
+    max-width: 50px;
+}
+
+
+/* end of home section rules */
+
+
+/* Editing the about section of the page */
+
+#about {
+    display: grid;
+    grid-template-columns: repeat(2, 40vw);
+    grid-template-rows: 100px 0px 150px repeat(2, 40px) 50px;
+    grid-gap: 0px 40px;
+    height: auto;
+    width: 100vw;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.30em;
+    line-height: 1.5em;
+    color: rgba(0, 0, 0, .75);
+}
+
+#about h1 {
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
+    text-align: center;
+    font-size: 1.5em;
+}
+
+#about hr {
+    grid-row: 2 / 3;
+    grid-column: 1 / 3;
+    position: relative;
+    top: 0px;
+}
+
+#about .firsthalf {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+}
+
+#about .secondhalf {
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
+}
+
+#about .full {
+    grid-column: 1 / 3;
+    grid-row: 4 / 5;
+}
+
+#about .fullEm {
+    grid-column: 1 / 3;
+    grid-row: 5 / 6;
+}
+
+
+/* end of the about section rules */
+
+
+/* Editing the features section of the page */
+
+#features {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #90ddaa;
+    font-size: 1.5em;
+    color: rgba(0, 0, 0, .75)
+}
+
+.features-container {
+    width: 90%;
+    display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
 }
-#bot-image{
-    margin: 5vh 0 5vh 10vw;
-}
-#about-bot{
-    flex-basis: 35vw;
+
+.feature-card {
+    height: 500px;
+    width: 30%;
+    margin: 15px 15px 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     text-align: center;
-    font-size:1.5em;
-    color:white;
+    color: rgba(0, 0, 0, 0.75);
+    background-color: #40596b;
+    font-size: 0.8em;
 }
-#about-bot h1{
-    color:rgba(0,0,0,.65);
-    font-size: 3em;
+
+.feature-card-text {
+    background-color: white;
+    /* flex-basis: 100%; */
+    padding: 15px;
 }
-#addslacklight{
-    margin: 0 auto;
+
+.feature-card-image {
+    width: 100%;
+    height: 350px;
+    padding: 50px;
+}
+
+.feature-card-image img {
+    max-width: 60%;
+    max-height: 100%;
+}
+
+
+/* End of the features section rules*/
+
+
+/* Editing the style of addslack section of the page */
+
+#addslack {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: rgba(0, 0, 0, .75);
+    font-size: 1.5em;
+}
+
+#addslack h1 {
+    font-size: 1.5em;
+}
+
+#addslack hr {
+    position: relative;
+    top: 5px;
+}
+
+#addslack p {
+    font-size: 0.75em;
+    width: 500px;
+    text-align: center;
+}
+
+#addslackdark {
+    margin: 75px auto;
     display: flex;
     width: 300px;
     height: 75px;
@@ -78,101 +271,19 @@ ul li a{
     font-size: 1em;
     border: none;
     border-radius: 5px;
-    background-color: white;
-    color:rgba(0,0,0,.65);
-}
-#addslacklight:hover{
-    background-color: rgba(255, 255, 255, 0.8)
-}
-#slacklogo{
-    height: 50%;
-    max-width:40px;
-    margin-right: 20px;
-}
-/* end of home section rules */
-
-/* Editing the about section of the page */
-#about{
-    display: grid;
-    grid-template-columns: repeat(2,45vw);
-    grid-template-rows: repeat(2,1fr) repeat(2,50px) 50px;
-    grid-gap: 5px 40px; 
-    height: auto;
-    width:100vw;
-    justify-content: center;
-    align-items: center; 
-    font-size: 1.5em;   
-}
-#about h1{
-    grid-area: "title";
-    grid-column: 1 / 3 ;
-    grid-row: 1 / 2;
-    text-align: center;
-}
-#about .firsthalf{
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
-}
-#about .secondhalf{ 
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;  
-}
-#about .full{
-    grid-column: 1 / 3;
-    grid-row: 3 / 4;  
-}
-#about .fullEm{
-    grid-column: 1 / 3;
-    grid-row: 4 / 5; 
-}
-/* end of the about section rules */
-
-/* Editing the features section of the page */
-#features{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: #90ddaa;
-    font-size: 1.5em;
-    padding-top:25px;
-    padding-bottom:25px
-}
-
-.features-container{
-    width: 90%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-}
-
-.feature-card{
-    height:425px;
-    width:30%;
-    margin:30px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    color: rgba(0,0,0,0.75);
     background-color: #40596b;
-    font-size: 0.8em;
+    color: rgba(0, 0, 0, .65);
 }
-.feature-card-text{
-    background-color: white;
-    flex-basis: 100%;
-    padding: 15px;
-}
-.feature-card-image{
-    width: 100%;
-    height: 200px;
-    padding: 50px;
-}
-.feature-card-image img{
-    max-width: 100%;
-    max-height: 100%;
+#addslackdark p{
+    width:50%;
+    font-size: 1em;
+    color: white; 
 }
 
-/* End of the features section rules*/
+#addslackdark:hover {
+    background-color: rgba(30, 30, 30, 0.8)
+}
+
+
+
+/* End of the addslack section of the page *
